bat.bool1.parottrouble.ParotTrouble.scala.error
Erreur de compilation :
ParotTrouble:9: error: type mismatch;
 found   : Unit
 required: Boolean
    if (hour>20) {
    ^ParotTrouble:5: error: type mismatch;
 found   : Unit
 required: Boolean
  if (talking == true) {
  ^